# paris

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  rust_test.yml
benches/: formatting.rs
src/: colors.rs  icons.rs  lib.rs
src/formatter/: ansi.rs  color.rs  custom.rs  from_key.rs  icons.rs  mod.rs  style.rs
src/formatter/concerns/: ansi.rs  key.rs  key_list.rs  mod.rs
src/formatter/keys/: from_key.rs  key.rs  key_list.rs  mod.rs
src/logger/: custom.rs  mod.rs
src/macros/: mod.rs
src/output/: mod.rs  stderr.rs  stdout.rs
src/timestamp/: mod.rs
tests/: logger_integration.rs
