[package]
name = "paris"
version = "1.5.5"
authors = ["Poly <alexhexan22@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/paris"
homepage = "https://github.com/0x20F/paris"
repository = "https://github.com/0x20F/paris"
readme = "README.md"

keywords = ["log", "logger", "shell", "terminal", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

description = "A simple logger for your CLI apps or other things you want in the terminal"

license = "MIT OR Apache-2.0"

exclude = [
    "example/*",
    "tests/*",
    ".github/*"
]



[badges]
maintenance = { status = "actively-developed" }



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", optional = true }


[features]
timestamps = ["chrono"]
macros = []
no_logger = []
