[package]
name = "paris"
version = "1.5.15"
authors = ["Poly <0x20fa@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/paris"
homepage = "https://github.com/0x20F/paris"
repository = "https://github.com/0x20F/paris"
readme = "README.md"

keywords = ["log", "logger", "shell", "terminal", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

description = "A simple logger for your CLI apps or other things you want in the terminal"

license = "MPL-2.0"

exclude = [
    "example/*",
    "tests/*",
    ".github/*"
]



[badges]
maintenance = { status = "passively-maintained" }


[features]
timestamps = []
macros = []
no_logger = []
